<resources>
    <string name="app_name">GNDEC_sports_admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_password">Password</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="DB_Users">Users</string>
    <string name="tag">GNDECsports</string>
    <string name="loading">loading</string>
    <string name="hint_dob">Enter D.O.B (DD/MM/YYYY)</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>
    <string name="pick_country">Pick Country</string>
    <string name="Select_Pdf">Select Pdf</string>
    <string name="DB_Pdfs">Pdfs</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="DB_user_pdfs">User-pdfs</string>
    <string name="gym">The Gymnasium/Multi exercise Hall is situated on the first floor of sports complex
and consist of all types of strength conditioning apparatus. The state –of-the- art
fitness center has something for everyone.</string>
    <string name="gym2">
The equipments consist of smith machine, hack squat, cable cross, Olympic lifting
platform, wall bars, three multi stations, seven single stations namely bicep curl,
chest press, shoulder press, peck deck, seated rowing, leg press, lats pull down
along with free weight section, free benches as well as stretching area for essential
cooling down.</string>
    <string name="gym3">
The student and staff members avail this facility on nominal charges of Rs 50/- per
month in the morning and evenings six day a week.</string>
    <string-array name="Events">
        <item>--Select Event--</item>
        <item>100m race</item>
        <item>500mm race</item>
        <item>1500m race</item>
        <item>150000m race</item>
        <item>Shot put</item>
        <item>Long jump</item>
        <item>Javelin throw</item>
        <item>Hammer throw</item>
        <item>Triple jump</item>
        <item>Pole Volt</item>
        <item>Discus Throw</item>
    </string-array>
    <string-array name="india_cities">
        <item>Agartala</item>
        <item>Agra</item>
        <item>Agumbe</item>
        <item>Ahmedabad</item>
        <item>Aizawl</item>
        <item>Ajmer</item>
        <item>Alappuzha Beach</item>
        <item>Allahabad</item>
        <item>Alleppey</item>
        <item>Almora</item>
        <item>Amarnath</item>
        <item>Amritsar</item>
        <item>Anantagir</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Araku valley</item>
        <item>Aurangabad</item>
        <item>Ayodhya</item>
        <item>Badrinath</item>
        <item>Bangalore</item>
        <item>Baroda</item>
        <item>Bastar</item>
        <item>Bhagalpur</item>
        <item>Bhilai</item>
        <item>Bhimtal</item>
        <item>Bhopal</item>
        <item>Bhubaneswar</item>
        <item>Bhuj</item>
        <item>Bidar</item>
        <item>Bilaspur</item>
        <item>Bodh Gaya</item>
        <item>Calicut</item>
        <item>Chail</item>
        <item>Chamba</item>
        <item>Chandigarh</item>
        <item>Chennai</item>
        <item>Chennai Beaches</item>
        <item>Cherai</item>
        <item>Cherrapunji</item>
        <item>Chidambaram</item>
        <item>Chikhaldara Hills</item>
        <item>Chopta</item>
        <item>Coimbatore</item>
        <item>Coonoor</item>
        <item>Coorg</item>
        <item>Corbett National Park</item>
        <item>Cotigao Wild Life Sanctuary</item>
        <item>Cuttack</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Dalhousie</item>
        <item>Daman and Diu</item>
        <item>Darjeeling</item>
        <item>Dehradun</item>
        <item>Delhi</item>
        <item>Devikulam</item>
        <item>Dhanaulti</item>
        <item>Dharamashala</item>
        <item>Dindigul</item>
        <item>Dudhwa National Park</item>
        <item>Dwaraka</item>
        <item>Faridabad</item>
        <item>Gandhinagar</item>
        <item>Gangotri</item>
        <item>Gangtok</item>
        <item>Gir Wildlife Sanctuary</item>
        <item>Goa</item>
        <item>Great Himalayan National Park</item>
        <item>Gulmarg</item>
        <item>Gurgaon</item>
        <item>Guruvayoor</item>
        <item>Guwahati</item>
        <item>Gwalior</item>
        <item>Hampi</item>
        <item>Haridwar</item>
        <item>Hogenakkal</item>
        <item>Horsley Hills</item>
        <item>Hyderabad</item>
        <item>Idukki</item>
        <item>Imphal</item>
        <item>Indore</item>
        <item>Itangar</item>
        <item>Jabalpur</item>
        <item>Jaipur</item>
        <item>Jaisalmer</item>
        <item>Jalandhar</item>
        <item>Jammu</item>
        <item>Jamshedpur</item>
        <item>Jodhpur</item>
        <item>Kanchipuram</item>
        <item>Kanha National Park</item>
        <item>Kanpur</item>
        <item>Kanyakumari</item>
        <item>Kargil</item>
        <item>Karwar</item>
        <item>Kausani</item>
        <item>Kedarnath</item>
        <item>Keoladeoghana National Park</item>
        <item>Khajuraho</item>
        <item>Kochi</item>
        <item>Kodaikanal</item>
        <item>Kolkata</item>
        <item>Kollam</item>
        <item>Konark</item>
        <item>Kotagiri</item>
        <item>Kottakkal and Ayurveda</item>
        <item>Kovalam</item>
        <item>Kovalam and Ayurveda</item>
        <item>Kudremukh</item>
        <item>Kullu</item>
        <item>Kumaon</item>
        <item>Kumarakom</item>
        <item>Kumarakom and Ayurveda</item>
        <item>Kumarakom Bird Sanctuary</item>
        <item>Kurukshetra</item>
        <item>Lakshadweep</item>
        <item>Lucknow</item>
        <item>Ludhiana</item>
        <item>Madurai</item>
        <item>Mahabalipuram</item>
        <item>Malpe Beach</item>
        <item>Manas National Park</item>
        <item>Mangalore</item>
        <item>Maravanthe Beach</item>
        <item>Margoa</item>
        <item>Mount Abu</item>
        <item>Mumbai</item>
        <item>Munnar</item>
        <item>Mussoorie</item>
        <item>Mysore</item>
        <item>Nahsik</item>
        <item>Nalanda</item>
        <item>Nanda Devi National Park</item>
        <item>Nandi Hills</item>
        <item>Netravali Wild Life Sanctuary</item>
        <item>Ooty</item>
        <item>Orchha</item>
        <item>Pahalgam</item>
        <item>Palakkad</item>
        <item>Panchgani</item>
        <item>Patna</item>
        <item>Patnitop</item>
        <item>Pattadakkal</item>
        <item>Periyar Wildlife Sanctuary</item>
        <item>Pithoragarh</item>
        <item>Pondicherry</item>
        <item>Pune</item>
        <item>Puri</item>
        <item>Pushkar</item>
        <item>Raipur</item>
        <item>Rajaji National Park</item>
        <item>Rajgir</item>
        <item>Rameshwaram</item>
        <item>Ranchi</item>
        <item>Ranganthittu Bird Sanctuary</item>
        <item>Ranikhet</item>
        <item>Ranthambore</item>
        <item>Rishikesh</item>
        <item>Rourkela</item>
        <item>Sanchi</item>
        <item>Saputara</item>
        <item>Sariska Wildlife Sanctuary</item>
        <item>Shillong</item>
        <item>Shimla</item>
        <item>Sohna_Hills</item>
        <item>Srinagar</item>
        <item>Sunderbans</item>
        <item>Surat</item>
        <item>Tezpur</item>
        <item>Thanjavur</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Tirunelveli</item>
        <item>Tirupati</item>
        <item>Trichy</item>
        <item>Udaipur</item>
        <item>Ujjain</item>
        <item>Vaishali</item>
        <item>Valley of Flowers</item>
        <item>Varanasi</item>
        <item>Varkala and Ayurveda</item>
        <item>Vijayawada</item>
        <item>Vishakhapatnam</item>
        <item>Vrindhavan</item>
        <item>Warangal</item>
        <item>Wayanad</item>
        <item>Wayanad Wildlife Sanctuary</item>
        <item>Yercaud</item>
        <item>Zanskar</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_post">post</string>
    <string name="title_activity_graphs">Graphs</string>
    <string name="title_activity_basket_ball">BasketBall</string>
    <string name="title_activity_foot_ball">FootBall</string>
    <string name="introSports">
    "     The Sports Department was established in 1956 with the aim to inculcate sports culture among staff and students of the college. Guided by Guru Nanak Dev Jis values and our commitment to diversity, we are leading sports department that inspires the student by fostering healthy lifestyles through involvement in physical education and sports activities that cultivate lifelong health.

        Our institute prepares student to face rapidly changing world with confidence and a sense of responsibility to make the world a better place. To that end, the sports department views its interaction with students through physical education programmes that help them discover, develop and test their skills to create a positive change.

        We provide adequate environment, infrastructure to persue sports activities and provide playing opportunities to the wide range of students regardless of the gender or cultural backgrounds. The department simultaneously prepare teams for inter-college and inter-varsity competition. Various tournaments / meet, intramural activity are organized throughout the session.

        The campus intramural sports component strives to provide a variety of opportunities that contribute to and promote the six dimensions of wellness: physical, emotional, social, spiritual, intellectual and environmental. We are dedicated to make intramural part of campus life. Our goal is to continuously create and provide a competitive, safe and enjoyable atmosphere that encourages teamwork, leadership development as well as lifelong pattern of positive activity."
    </string>
    <string name="introvision">
           Promoting the personal and professional development of student at par international standards through designing and implementing programs that support healthy lifestyles and academic success.
    </string>
    <string name="intromission">
        "\u2022  To honor academic mission of the college by promoting general welfare of the students.

        \u2022  To promote physical activity and help individuals enhance their health, fitness and quality of life.

        \u2022  To develop state of art infrastructure of international standard.

        \u2022  To develop overall personality of the students with focus on core values like teamwork, respect, integrity, balance, humility, accountability, sportsmanship.

        \u2022  To inculcate moral, ethical and spiritual values through intramural and extramural activities.

        \u2022  To engage the mind, to elevate the spirit and stimulate the best effort of all who are associated with the college."

        </string>
</resources>