<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.birjot.gndec_sports_admin.Fragments.introduction"
        android:paddingTop="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">



    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >
    <!-- TODO: Update blank fragment layout -->


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout3">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="67dp"
                android:layout_height="match_parent"
                android:src="@drawable/photo6104773795236653005"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textVwName1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:text="SPORTS DEPARTMENT" />



            </LinearLayout>

        </LinearLayout>

  <!--      <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SPORTS DEPARTMENT"
            android:textStyle="bold"
            android:textColor="@color/colorheadig"
            android:shadowColor="@color/colorheadigsha"
            android:textSize="22dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.503" />-->

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="349dp"
            android:layout_height="127dp"
            app:srcCompat="@drawable/gndecsportscomplex"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.454"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/introSports"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VISION:"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/colorheadig"
            android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.028"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introvision"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MISSION:"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/colorheadig"
            android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intromission"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.01"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />


    </android.support.constraint.ConstraintLayout>


</FrameLayout>
    </ScrollView>